# dealogic-report-downloader

./: README.md  pyproject.toml
dealogic_report_downloader/: get_access_token.py  get_report_data.py  main.py
dealogic_report_downloader/pages/: login.py  reports.py
scripts/: get_auth_token.sh  get_report_data.sh  start.sh
