[tool.poetry]
name = "dealogic-report-downloader"
version = "1.0.0"
description = ""
authors = ["Mitja Kramberger <mitja.kramberger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.43.0"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
